change her cta button logo

--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -5,7 +5,8 @@
     "services": "Xidmətlər",
     "trainers": "Məşqçilər",
     "membership": "Üzvlük",
-    "contact": "Əlaqə"
+    "contact": "Əlaqə",
+    "gallery": "Qalereya"
   },
   "hero": {
     "title_part1": "CROWN",
