--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,8 @@
     "services": "Services",
     "trainers": "Trainers",
     "membership": "Membership",
-    "contact": "Contact"
+    "contact": "Contact",
+    "gallery": "Gallery"
   },
   "hero": {
     "title_part1": "CROWN",
