--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,7 +5,8 @@
     "services": "Услуги",
     "trainers": "Тренеры",
     "membership": "Членство",
-    "contact": "Контакты"
+    "contact": "Контакты",
+    "gallery": "Галерея"
   },
   "hero": {
     "title_part1": "CROWN",
