--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -91,6 +91,10 @@
     "section_title_highlight": "ЧЛЕНСТВА",
     "section_description": "Выберите свой путь к роскошному велнесу. Каждое членство создано для предоставления исключительной ценности и эксклюзивного опыта в главном направлении Азербайджана.",
     "founding_offer": "Члены-учредители: Скидка до 25% на первые 6 месяцев",
+    "billing_period": {
+      "monthly": "Ежемесячно",
+      "annual": "Ежегодно"
+    },
     "essential": {
       "name": "Базовый",
       "subtitle": "Идеальная Основа",
